# flappy-bird-3d

./: .gitignore  CMakeLists.txt  app.h  bird.h  game.h  main.cpp
src/: app.cpp  app.h  constraint.h  main2.cpp  model.h  shader_reader.h  soft_image.h
src/assets/shaders/: main.frag
